--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                 <!-- Logo -->
                 <div class="mb-8">
-                    <img id="logoImage" src="logo.png" alt="Un-Gay Urself Logo" class="w-32 h-32 mx-auto mb-6 rounded-full animate-pulse-glow">
+                    <img id="logoImage" src="Logo1.png" alt="Un-Gay Urself Logo" class="w-32 h-32 mx-auto mb-6 rounded-full animate-pulse-glow">
                 </div>
 
                 <h1 class="text-6xl md:text-8xl font-black mb-4 font-meme relative">
