--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             id="logoImage"
                             src="logo.png"
                             alt="Un-Gay Urself Logo"
-                            class="w-32 h-32 mx-auto mb-6 rounded-full animate-pulse-glow"
+                            class="logo w-32 h-32 mx-auto mb-6 rounded-full animate-pulse-glow"
                         />
                     </div>
 
