--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             </button>
         </div>
 
+        <!-- Banner Image -->
+<div class="mb-8">
+  <img src="banner.png" alt="Un-Gay Urself Banner" class="w-full max-w-4xl mx-auto mb-8 rounded-lg shadow-lg" />
+</div>
+
         <!-- Achievement System -->
         <div id="achievementProgress" class="fixed bottom-4 left-4 z-50">
             <div
