--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
+        img id="logoImage" src="logo.png" alt="Un-Gay Urself Logo" class="w-32 h-32 mx-auto mb-6 rounded-full animate-pulse-glow" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Un-Gay Urself™ - Available Nowhere. Results Guaranteed.</title>
@@ -53,9 +54,6 @@
                         class="bg-gradient-to-r from-purple-500 to-pink-500 h-2 rounded-full transition-all duration-500"
                         style="width: 20%"
                     ></div>
-                </div>
-            </div>
-        </div>
 
         <!-- Achievement Notification -->
         <div
@@ -78,9 +76,6 @@
                             Visited the Un-Gay Urself website
                         </p>
                     </div>
-                </div>
-            </div>
-        </div>
 
         <!-- Animated Background -->
         <div
@@ -225,8 +220,6 @@
                         >
                             <!-- Meme buttons will be populated by JavaScript -->
                         </div>
-                    </div>
-                </div>
             </section>
 
             <!-- Merch Section -->
@@ -271,8 +264,6 @@
                                 Court Summons Cards
                             </button>
                         </div>
-                    </div>
-                </div>
             </section>
 
             <!-- Token Information Section -->
@@ -290,7 +281,6 @@
                     >
                         <!-- Token info will be populated by JavaScript -->
                     </div>
-                </div>
             </section>
 
             <!-- Countdown Timer Section -->
@@ -323,7 +313,6 @@
                                 30
                             </div>
                             <div class="text-gray-300 font-bold">DAYS</div>
-                        </div>
                         <div
                             class="bg-gray-800/50 p-6 rounded-xl border border-orange-400/30"
                         >
@@ -357,7 +346,6 @@
                             </div>
                             <div class="text-gray-300 font-bold">SECONDS</div>
                         </div>
-                    </div>
 
                     <div
                         class="bg-gray-800/50 p-6 rounded-xl border border-purple-400/30"
@@ -372,8 +360,6 @@
                             <div>📈 Bonus transformation multiplier</div>
                             <div>🏆 Exclusive Chad certificate</div>
                         </div>
-                    </div>
-                </div>
             </section>
 
             <!-- Testimonials Section -->
@@ -410,7 +396,6 @@
                             joke frequency.
                         </p>
                     </div>
-                </div>
             </section>
 
             <!-- Whitepaper Section -->
